--- a/src/main/resources/edu/miracosta/cs112/finalproject/finalproject/results-view.fxml
+++ b/src/main/resources/edu/miracosta/cs112/finalproject/finalproject/results-view.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Point3D?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="47.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Here are your quiz results" wrappingWidth="206.528076171875">
          <font>
@@ -20,7 +17,7 @@
             <Font name="System Bold" size="36.0" />
          </font>
       </Text>
-      <Text layoutX="47.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You've known numCorrect/25 of the globe" textAlignment="CENTER" wrappingWidth="206.528076171875">
+      <Text layoutX="47.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You've known numCorrect/25 of the world!" textAlignment="CENTER" wrappingWidth="206.528076171875">
          <font>
             <Font size="18.0" />
          </font>
